kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: albiondata-backend
  namespace: albiondata
spec:
  ports:
    - name: http
      targetPort: 8000
      port: 8000
  selector:
    app: albiondata-backend
