kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: albiondata-backend
  namespace: albiondata
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: albion-data.com
      http:
        paths:
          - path: /api
            backend:
              serviceName: albiondata-backend
              servicePort: http
